Add new baremetalds workflows for conf, ipv4 and ovn
Update workflows and add them to a single repo

--- a/ci-operator/step-registry/baremetalds/e2e/baremetalds-e2e-workflow.yaml
+++ b/ci-operator/step-registry/baremetalds/e2e/baremetalds-e2e-workflow.yaml
@@ -4,8 +4,7 @@ workflow:
     pre:
       - chain: baremetalds-ipi-pre
     test:
-      - ref: baremetalds-e2e-conf
-      - ref: baremetalds-e2e-test
+      - chain: baremetalds-ipi-test
     post:
       - chain: baremetalds-ipi-post
   documentation: |-
