--- a/ci-operator/step-registry/baremetalds/e2e/ipv4/baremetalds-e2e-ipv4-workflow.yaml
+++ b/ci-operator/step-registry/baremetalds/e2e/ipv4/baremetalds-e2e-ipv4-workflow.yaml
@@ -1,10 +1,10 @@
 workflow:
-  as: baremetalds-e2e-virtualmedia
+  as: baremetalds-e2e-ipv4
   steps:
     env:
       DEVSCRIPTS_CONFIG: |
         IP_STACK=v4
-        PROVISIONING_NETWORK_PROFILE=Disabled
+        NETWORK_TYPE=OpenShiftSDN 
     pre:
       - chain: baremetalds-ipi-pre
     test:
@@ -12,4 +12,4 @@ workflow:
     post:
       - chain: baremetalds-ipi-post
   documentation: |-
-    This workflow executes the common end-to-end test suite on a virtualmedia based deployment by running dev-scripts on a packet server.
+    This workflow executes the common end-to-end test suite on a IPv4 cluster provisioned by running dev-scripts on a packet server.
