--- a/ci-operator/step-registry/baremetalds/e2e/ovn/ipsec/baremetalds-e2e-ovn-ipsec-workflow.yaml
+++ b/ci-operator/step-registry/baremetalds/e2e/ovn/ipsec/baremetalds-e2e-ovn-ipsec-workflow.yaml
@@ -8,8 +8,7 @@ workflow:
       - ref: baremetalds-devscripts-proxy
       - ref: baremetalds-devscripts-setup
     test:
-      - ref: baremetalds-e2e-conf
-      - ref: baremetalds-e2e-test
+      - chain: baremetalds-ipi-test
     post:
       - chain: baremetalds-ipi-post
   documentation: |-
