--- a/ci-operator/step-registry/baremetalds/e2e/upgrade/baremetalds-e2e-upgrade-workflow.yaml
+++ b/ci-operator/step-registry/baremetalds/e2e/upgrade/baremetalds-e2e-upgrade-workflow.yaml
@@ -1,18 +1,20 @@
 workflow:
   as: baremetalds-e2e-upgrade
   steps:
+    env:
+      TEST_TYPE: upgrade
+      TEST_SUITE: ""
+      DEVSCRIPTS_CONFIG: |
+        IP_STACK=v4
+        NETWORK_TYPE=OpenShiftSDN
     pre:
       - chain: baremetalds-ipi-pre
     test:
-      - ref: baremetalds-e2e-conf
-      - ref: baremetalds-e2e-test
+      - chain: baremetalds-ipi-test
     post:
       - chain: baremetalds-ipi-post
     dependencies:
       OPENSHIFT_INSTALL_RELEASE_IMAGE: "release:initial"
       OPENSHIFT_UPGRADE_RELEASE_IMAGE_OVERRIDE: "release:latest"
-    env:
-      TEST_TYPE: upgrade
-      TEST_SUITE: ""
   documentation: |-
     This workflow executes the common end-to-end upgrade test suite on a cluster provisioned by running dev-scripts on a packet server.
